<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sign_up" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:layout_margin="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        tools:autofillHints="abc@gmail.com" />


    <EditText
        android:id="@+id/login_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_et"
        android:layout_margin="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_you_phone_number"
        android:inputType="phone"
        android:padding="15dp" />


    <EditText
        android:id="@+id/login_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_et"
        android:layout_margin="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:padding="15dp" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_name_et"
        android:layout_margin="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <EditText
        android:id="@+id/login_password_repeat_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_et"
        android:layout_margin="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/re_enter_your_password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_repeat_et"
        android:layout_margin="15dp"
        android:background="@drawable/button_design"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</RelativeLayout>